2008-01-28  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokerdatabase.py.in
	(PokerDatabaseTestCase.test02_dbVersionTooOld): Wrote function.
	(PokerDatabaseTestCase.setUp): Do not create self.db here, since
	sometimes we want it to be a dummy.
	(PokerDatabaseTestCase.tearDown): try/except around db close; it
	may never get created.
	(Run): Switch to VERBOSE_T == 4 to get maximum verbosity coverage.

2008-01-27  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokertable.py.in (MockService.saveHand): Added round5
	test.
	(MockService.loadHand): Added 'values' to the serials2chips dict.
	(MockService.saveHand): Fixed showdown test since we now have two
	showdowns.
	(PokerTableTestCase.test24_treeFallingInWoodsWithNoPlayerToHearIt):
	Wrote function.
	(PokerTableTestCaseTransient.test07_break_message.Tournament):
	Moved to Trainsient table area only.
	(PokerTableTestCaseWithPredefinedDecks): Renamed class to
	WithPredefinedDecksAndNoAutoDeal
	(PokerTableTestCaseWithPredefinedDecksAndNoAutoDeal.test01_autodeal):
	Derived function from superclass.
	(PokerTableTestCaseWithPredefinedDecksAndNoAutoDeal.test02_autodeal_check):
	Derived function from superclass.
	(PokerTableTestCaseWithPredefinedDecksAndNoAutoDeal.test12_everyone_timeout):
	Derived function from superclass.
	(PokerTableTestCaseWithPredefinedDecksAndNoAutoDeal.test16_autoMuckTimeoutPolicy):
	Derived function from superclass.
	(PokerTableTestCaseWithPredefinedDecksAndNoAutoDeal.test17_bogusTimeoutPolicy):
	Derived function from superclass.
	(PokerTableTestCase.test08_5_kick): Added use of fakeGameRemovePlayer.
	(PokerTableTestCase.test08_player_has_trouble_joining): Added test
	for player5 joining table 2.
	(MockClientBot): Created class.
	(MockClientBot.getName): Created function.
	(PokerTableTestCase.createBot): Wrote function.
	(PokerTableTestCase.test99_destroy_table): Added test for updating
	a destroyed table.
	(MockService.tableMoneyAndBet): Changed return value to force error.